--- a/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
+++ b/client/src/app/components/unverified-data/unverified-data-set/unverified-data-set.component.html
@@ -172,7 +172,7 @@
 												<div *ngIf="!unverifiedWarmspotData.size" class="error-inline">
 													Not set
 												</div>
-												{{unverifiedWarmspotData.size}}
+												{{unverifiedWarmspotData.description}}
 											</div>
 											<div class="data-table-action-column truncate flex-item" fxFlex="64px">
 												<button md-icon-button [mdMenuTriggerFor]="warmspotMenu">
